# algopractice

./: .gitignore  README.md  go.mod
CLRS/Ch4/: maximum_subarray_divide_and_conquer.go  maximum_subarray_divide_and_conquer_test.go
c/guessing_game/: main.c
codeforces/04a/: main.go  main_test.go
codeforces/158A/: main.go
codeforces/71A/: main.go  main_test.go
concurrency_in_go/ch03/: cond.go
erickson/ch2_6/: longest_increasing_subsequence.go  longest_increasing_subsequence_test.go
erickson/ch3_6/: LIS_dynamic_programming.go  LIS_dynamic_programming_test.go
erickson/ch3_7/: edit_distance.go  edit_distance_test.go
erickson/ch3_9/: optimal_binary_search_trees.go  optimal_binary_search_trees_test.go
exercism/c/: .gitignore  CMakeLists.txt
exercism/c/acronym/: CMakeLists.txt  makefile
exercism/c/acronym/src/: acronym.c  main.c
exercism/c/acronym/test/: test_acronym.c
exercism/c/gigasecond/: CMakeLists.txt
exercism/c/gigasecond/src/: gigasecond.c
exercism/c/gigasecond/test/: test_gigasecond.c
exercism/c/hamming/: CMakeLists.txt
exercism/c/hamming/src/: hamming.c
exercism/c/isogram/: CMakeLists.txt
exercism/c/matching-brackets/: CMakeLists.txt
exercism/c/matching-brackets/src/: matching_brackets.c
exercism/c/nucleotide-count/: CMakeLists.txt
exercism/c/nucleotide-count/src/: nucleotide_count.c
exercism/c/pangram/: CMakeLists.txt  makefile
exercism/c/rna-transcription/: CMakeLists.txt
exercism/c/rna-transcription/src/: rna_transcription.c
exercism/c/secret-handshake/: CMakeLists.txt
exercism/c/secret-handshake/src/: secret_handshake.c
exercism/c/space-age/: CMakeLists.txt
exercism/c/space-age/src/: space_age.c
exercism/go/acronym/: acronym.go
go_scratch/guessing_game/: guessing_game  main.go
kandr/ch5_10/: CMakeLists.txt  main.c
leetcode/Five/: longest_2.go  longest_palindromic_substring.go  longest_palindromic_substring_test.go
leetcode/Four/: median_2_sorted_arrays.go  median_2_sorted_arrays_test.go
leetcode/One/: two_sum.go
leetcode/Three/: length_2.go  length_of_longest_substring.go  length_of_longest_substring_test.go
leetcode/Two/: add_two_numbers.go
leetcode/lc_14/: longest_common_prefix.go  longest_common_prefix_test.go
leetcode/lc_2/: add_two_numbers.go
leetcode/lc_20/: valid_parentheses.go  valid_parentheses_test.go
leetcode/lc_21/: merge_two_sorted_lists.go
leetcode/lc_26/: remove_dups_test.go
leetcode/lc_27/: remove_element_test.go
leetcode/lc_28/: strStr.go
leetcode/lc_3/: length_2.go  length_of_longest_substring_test.go
leetcode/lc_35/: search_insert_position.go
leetcode/lc_4/: median_2_sorted_arrays.go
leetcode/lc_5/: longest_2.go  longest_palindromic_substring.go
leetcode/lc_53/: maximum_subarray.go  maximum_subarray_test.go
leetcode/lc_58/: length_of_longest_word.go  length_of_longest_word_test.go
leetcode/lc_67/: add_binary.go  add_binary_test.go
leetcode/lc_7/: reverse_integer_test.go
leetcode/lc_9/: palindrome_number.go
modern_c/ch01_1_2/: CMakeCache.txt  CMakeLists.txt  Makefile  ch01_1_2.cbp  cmake_install.cmake  main  main.c
rust/guessing_game/: Cargo.toml
rust/lists/: Cargo.toml
rust/minigrep/: Cargo.toml
rust/rust_book/: Cargo.toml
scratch/: scratch_4.go  scratch_4_test.go
sedgewick/ch6/: longest_repeated_substring.go  longest_repeated_substring_test.go
(+205 files in other folders)
